--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "clipclean"
 version = "0.1.0"
 authors = ["Kristoffer Ödmark <kristoffer.odmark90@gmail.com>"]
 edition = "2018"
+description = "Deletes facebook messenger links when in clipboard"
+license = "MIT"
+repository = "https://github.com/TotalKrill/clipclean"
 
 [dependencies]
 clipboard = "0.5.0"
