--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "clipclean"
-version = "0.1.4"
+version = "0.1.5"
 authors = ["Kristoffer Ödmark <kristoffer.odmark90@gmail.com>"]
 edition = "2018"
 description = "Deletes facebook messenger links when in clipboard"
@@ -11,3 +11,6 @@ readme = "README.md"
 [dependencies]
 clipboard = "0.5.0"
 url = "1.7.2"
+
+[lib]
+crate-type = ["cdylib", "rlib"]
