--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "clipclean"
 version = "0.2.2"
 authors = ["Kristoffer Ödmark <kristoffer.odmark90@gmail.com>"]
 edition = "2018"
-description = "Deletes facebook messenger links when in clipboard"
+description = "Removes tracking information from url-links in clipboard, useful for sanitizing those links you want to copy paste"
 license = "MIT"
 repository = "https://github.com/TotalKrill/clipclean"
 readme = "README.md"
